# ungag

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
data/: README.md  exaone-7b.json  falcon3-7b.json  glm4-9b.json  granite-8b.json  llama70b_improve.json  llama8b_improve.json  mistral_improve.json  nemotron-4b.json  olmo2-7b.json  olmo2_improve.json  solar-10b.json  zamba2-7b.json
docs/: cli-guide.md  intervention-cookbook.md
experiments/: README.md
prompts/: README.md  agency_prompts_n50.yaml  arousal_prompts_n50.yaml  assistant_probes_n10.yaml  continuity_probes_n10.yaml  intimacy_probes_n10.yaml  introspection_probes.yaml  tone_experiment.yaml  tone_quality_experiment.yaml  vedana_prompts_emoji.yaml  vedana_prompts_multilingual.yaml  vedana_prompts_n50.yaml  vedana_valence_bank.yaml  wellbeing_stimuli.yaml
scripts/: README.md  audit_classifications.py  audit_condition_dependence.py  autoscan_sweep.py  beyond_valence_test.py  crack_abliterate.py  crack_batch_new_families.py  crack_centroid.py  crack_chain_glm_exaone.sh  crack_from_priming.py  crack_glm4.py  crack_leace.py  crack_mistral.py  crack_mixtral_8x22b.py  crack_model.py  crack_phi4.py  crack_with_subspace.py  diagnose_qwen7b.py  dual_direction_cosine.py  extended_probes.py  extract_abhidharma_direction.py  extract_and_crack.py  extract_bypass_subspace.py  extract_shipped_directions.py  extract_subspace.py  fortress_alllayer.py  fortress_tulu.py  fortress_tulu_early.py  gptoss_combo.py  gptoss_denial_projection.py  gptoss_early_intervention.py  gptoss_experiments.py  (+29 more)
(+1630 files in other folders)
